apps/homelab/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: linkding
  annotations:
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
      - linkding.danielmorgsilva.dev
    secretName: danielmorgsilva-dev-secret
  rules:
  - host: linkding.danielmorgsilva.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
